--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -16,5 +16,7 @@
         <li>Your controller at <code><a href="{{ 'C:/wamp64/www/linktree_clone/src/Controller/SiteController.php'|file_link(0) }}">src/Controller/SiteController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'C:/wamp64/www/linktree_clone/templates/site/index.html.twig'|file_link(0) }}">templates/site/index.html.twig</a></code></li>
     </ul>
+
+    <a href="{{ path('app_login') }}" class="">Login</a>
 </div>
 {% endblock %}
