--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,7 +7,7 @@
             <div class="text-center text-4xl font-medium">Please sign in</div>
 
             {% if error %}
-                <div class="text-red-900 bg-red-300 p-4 font-bold border-red-800 rounded-sm">{{ error.messageKey }}</div>
+                <div class="text-red-900 bg-red-300 p-4 font-bold border-red-800 rounded-sm">{{ error.messageKey|trans(error.messageData,'security') }}</div>
             {% endif %}
 
             <div class="w-full transform border-b-2 bg-transparent text-lg duration-300 focus-within:border-indigo-500">
