--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,6 +13,7 @@
             <div class="w-full transform border-b-2 bg-transparent text-lg duration-300 focus-within:border-indigo-500">
                 <label for="inputEmail">Email</label>
                 <input
+                        value="{{ last_username }}"
                         name="email"
                         type="email"
                         placeholder="Email"
