--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -10,5 +10,13 @@
 
 <div class="example-wrapper">
     <h1>Hello  you are logged in! ✅</h1>
+
+    {% if is_granted('ROLE_ADMIN') %}
+        <p class="text-red-800 font-bold text-xl">You are cool admin</p>
+    {% endif %}
+
+    {% if is_granted('ROLE_USER') %}
+        <a href="{{ path('app_logout') }}" class="">LOGOUT</a>
+    {% endif %}
 </div>
 {% endblock %}
