added registration form

--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -22,6 +22,8 @@
         <a href="{{ path('app_logout') }}" class="">LOGOUT</a>
     {% else %}
         <a href="{{ path('app_login') }}" class="">Login</a>
+
+        <a href="{{ path('app_register') }}" class="">Register</a>
     {% endif %}
 
 </div>
