--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,14 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+
+    {% for flash in app.flashes('success') %}
+        <div class="alert alert-success">{{ flash }}</div>
+    {% endfor %}
+    {% for flash in app.flashes('danger') %}
+        <div class="alert alert-danger">{{ flash }}</div>
+    {% endfor %}
+
+    {% block body %}{% endblock %}
     </body>
 </html>
