--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,13 +14,17 @@
         </div>
 
         <div class="w-full transform border-b-2 bg-transparent text-lg duration-300 focus-within:border-indigo-500">
+            {{ form_row(registrationForm.name,{attr: {'class': 'w-full border-none bg-transparent outline-none placeholder:italic focus:outline-none','placeholder': 'Username'} }) }}
+        </div>
+
+        <div class="w-full transform border-b-2 bg-transparent text-lg duration-300 focus-within:border-indigo-500">
             {{ form_row(registrationForm.plainPassword, {
                 label: 'Password',
                 attr: {'class': 'w-full border-none bg-transparent outline-none placeholder:italic focus:outline-none','placeholder': 'Password'}
             }) }}
         </div>
 
-        {{ form_row(registrationForm.agreeTerms) }}
+        {# {{ form_row(registrationForm.agreeTerms) }} #}
 
         <button type="submit" class="transform rounded-sm bg-indigo-600 py-2 font-bold duration-300 hover:bg-indigo-400">Register</button>
         {{ form_end(registrationForm) }}
