--- a/templates/color/index.html.twig
+++ b/templates/color/index.html.twig
@@ -1,20 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ColorController!{% endblock %}
+{% block title %}Color index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Color index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Value</th>
+                <th>Created_at</th>
+                <th>Updated_at</th>
+                <th>Text</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for color in colors %}
+            <tr>
+                <td>{{ color.id }}</td>
+                <td>{{ color.name }}</td>
+                <td>{{ color.value }}</td>
+                <td>{{ color.createdAt ? color.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ color.updatedAt ? color.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ color.text }}</td>
+                <td>
+                    <a href="{{ path('app_color_show', {'id': color.id}) }}">show</a>
+                    <a href="{{ path('app_color_edit', {'id': color.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="7">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/linktree_clone/src/Controller/ColorController.php'|file_link(0) }}">src/Controller/ColorController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/linktree_clone/templates/color/index.html.twig'|file_link(0) }}">templates/color/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('app_color_new') }}">Create new</a>
 {% endblock %}
