--- a/templates/link/edit.html.twig
+++ b/templates/link/edit.html.twig
@@ -1,10 +1,13 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Edit Link{% endblock %}
+
 {% block body %}
-    Hello , you can edit this link
-{% endblock %}
+    <h1>Edit Link</h1>
 
-{% block title %}
-    edit link
-{% endblock %}
+    {{ include('link/_form.html.twig', {'button_label': 'Update'}) }}
 
+    <a href="{{ path('app_link_index') }}">back to list</a>
+
+    {{ include('link/_delete_form.html.twig') }}
+{% endblock %}
