--- a/templates/link/index.html.twig
+++ b/templates/link/index.html.twig
@@ -1,20 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LinkController!{% endblock %}
+{% block title %}Link index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Link index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Link</th>
+                <th>Created_at</th>
+                <th>Updated_at</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for link in links %}
+            <tr>
+                <td>{{ link.id }}</td>
+                <td>{{ link.name }}</td>
+                <td>{{ link.link }}</td>
+                <td>{{ link.createdAt ? link.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ link.updatedAt ? link.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>
+                    <a href="{{ path('app_link_show', {'id': link.id}) }}">show</a>
+                    <a href="{{ path('app_link_edit', {'id': link.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="6">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/linktree_clone/src/Controller/LinkController.php'|file_link(0) }}">src/Controller/LinkController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/linktree_clone/templates/link/index.html.twig'|file_link(0) }}">templates/link/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('app_link_new') }}">Create new</a>
 {% endblock %}
