--- a/templates/link/index.html.twig
+++ b/templates/link/index.html.twig
@@ -29,14 +29,18 @@
                 {% for link in links %}
                     <tr class="focus:outline-none h-16 border border-gray-100 rounded">
                         <td>{{ link.name }}</td>
-                        <td>{{ link.link }}</td>
-                        <td>Visits</td>
-                        <td>Last visit</td>
-                        {# <td>{{ link.createdAt ? link.createdAt|date('d.m.Y H:i:s') : '' }}</td>
-                        <td>{{ link.updatedAt ? link.updatedAt|date('d.m.Y H:i:s') : '' }}</td> #}
+                        <td><a href="{{ link.link }}">{{ link.link }}</a></td>
+                        <td>0</td>
+                        <td>{{ link.createdAt ? link.createdAt|date('d.m.Y H:i:s') : '' }}</td>
                         <td>
-                            <a href="{{ path('app_link_show', {'id': link.id}) }}">show</a>
-                            <a href="{{ path('app_link_edit', {'id': link.id}) }}">edit</a>
+                            <a class="focus:ring-2 focus:ring-offset-2 focus:ring-indigo-600 mt-4 sm:mt-0 inline-flex items-start justify-start px-6 py-3 bg-indigo-700 hover:bg-indigo-600 focus:outline-none rounded"
+                               href="{{ path('app_link_show', {'id': link.id}) }}">
+                                <span class="text-sm font-medium leading-none text-white">show</span>
+                            </a>
+                            <a class="focus:ring-2 focus:ring-offset-2 focus:ring-indigo-600 mt-4 sm:mt-0 inline-flex items-start justify-start px-6 py-3 bg-indigo-700 hover:bg-indigo-600 focus:outline-none rounded"
+                               href="{{ path('app_link_edit', {'id': link.id}) }}">
+                                <span class="text-sm font-medium leading-none text-white">edit</span>
+                            </a>
                         </td>
                     </tr>
                 {% else %}
