--- a/templates/link/_delete_form.html.twig
+++ b/templates/link/_delete_form.html.twig
@@ -1,4 +1,6 @@
 <form method="post" action="{{ path('app_link_delete', {'id': link.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ link.id) }}">
-    <button class="btn">Delete</button>
+    <button class="focus:ring-2 focus:ring-offset-2 focus:ring-indigo-600 mt-4 sm:mt-0 inline-flex items-start justify-start px-6 py-3 bg-indigo-700 hover:bg-indigo-600 focus:outline-none rounded text-white">
+        <span class="text-sm font-medium leading-none text-white">Delete</span>
+    </button>
 </form>
