--- a/templates/link/index.html.twig
+++ b/templates/link/index.html.twig
@@ -30,8 +30,8 @@
                     <tr class="focus:outline-none h-16 border border-gray-100 rounded">
                         <td>{{ link.name }}</td>
                         <td><a href="{{ link.link }}">{{ link.link }}</a></td>
-                        <td>0</td>
-                        <td>{{ link.createdAt ? link.createdAt|date('d.m.Y H:i:s') : '' }}</td>
+                        <td>{{ link.linkVisits|length }}</td>
+                        <td>{{ link.latestVisit ? link.latestVisit.createdAt|ago : 'Not yet visited' }}</td>
                         <td>
                             <a class="focus:ring-2 focus:ring-offset-2 focus:ring-indigo-600 mt-4 sm:mt-0 inline-flex items-start justify-start px-6 py-3 bg-indigo-700 hover:bg-indigo-600 focus:outline-none rounded"
                                href="{{ path('app_link_show', {'id': link.id}) }}">
