--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,34 +1,74 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Register!{% endblock %}
 
 {% block body %}
 
-    <main class="mx-auto flex min-h-screen w-full items-center justify-center bg-gray-900 text-white">
-        {{ form_start(registrationForm,{attr: {'class': 'flex w-[30rem] flex-col space-y-10'}}) }}
+    <div class="relative mx-auto flex w-full items-center justify-center font-sans flex-grow bg-blue-dark-900">
+        <div class="relative sm:max-w-sm w-full">
 
-        <h1 class="text-center text-4xl font-medium">Register</h1>
+            <div class="card bg-pink-dark shadow-lg w-full h-full rounded-3xl absolute transform -rotate-6"></div>
+            <div class="card bg-red-400 shadow-lg w-full h-full rounded-3xl absolute transform rotate-6"></div>
 
-        <div class="w-full transform border-b-2 bg-transparent text-lg duration-300 focus-within:border-indigo-500">
-            {{ form_row(registrationForm.email,{attr: {'class': 'w-full border-none bg-transparent outline-none placeholder:italic focus:outline-none','placeholder': 'Email'} }) }}
+            <div class="relative w-full rounded-3xl px-6 py-4 bg-blue-dark-700 shadow-md">
+
+                <label for="" class="block mt-3 text-xl text-slate-custom text-center font-semibold">
+                    REGISTER!
+                </label>
+
+                {{ form_start(registrationForm,{attr: {'class': 'mt-10'}}) }}
+
+                {% if not registrationForm.vars.valid %}
+                    <div class="text-red-900 bg-red-400 p-4 font-bold border-red-800 rounded-sm">
+                        {{ form_errors(registrationForm) }}
+                    </div>
+                {% endif %}
+
+                <div class="mt-7">
+                    {{ form_row(registrationForm.email,{
+                        label_attr: {'class': 'text-slate-custom'},
+                        attr: {'class': 'mt-1 block w-full border-none bg-slate-100 h-11 rounded shadow-lg hover:bg-blue-100 focus:bg-blue-100 placeholder:italic focus:ring-0 px-2','placeholder': 'Email'} }) }}
+                </div>
+
+                <div class="mt-7">
+                    {{ form_row(registrationForm.name,{
+                        label_attr: {'class': 'text-slate-custom'},
+                        attr: {'class': 'mt-1 block w-full border-none bg-slate-100 h-11 rounded shadow-lg hover:bg-blue-100 focus:bg-blue-100 placeholder:italic focus:ring-0 px-2','placeholder': 'Username'} }) }}
+                </div>
+
+                <div class="mt-7">
+                    {{ form_row(registrationForm.plainPassword, {
+                        label: 'Password',
+                        label_attr: {'class': 'text-slate-custom'},
+                        attr: {'class': 'mt-1 block w-full border-none bg-slate-100 h-11 rounded shadow-lg hover:bg-blue-100 focus:bg-blue-100 placeholder:italic focus:ring-0 px-2','placeholder': 'Password'}
+                    }) }}
+                </div>
+
+                {# {{ form_row(registrationForm.agreeTerms) }} #}
+
+                <div class="mt-7">
+                    <button type="submit"
+                            class="bg-pink-dark w-full py-3 rounded text-white shadow-xl hover:shadow-inner focus:outline-none transition duration-500 ease-in-out  transform hover:-translate-x hover:scale-105 font-bold">
+                        REGISTER
+                    </button>
+                </div>
+
+                {{ form_end(registrationForm) }}
+
+            </div>
         </div>
+    </div>
 
-        <div class="w-full transform border-b-2 bg-transparent text-lg duration-300 focus-within:border-indigo-500">
-            {{ form_row(registrationForm.name,{attr: {'class': 'w-full border-none bg-transparent outline-none placeholder:italic focus:outline-none','placeholder': 'Username'} }) }}
+
+    <footer class="flex-shrink-0 flex gap-4 bg-blue-dark-700 p-8 justify-center">
+        <div class="text-slate-500">Already have an account?</div>
+        <div>
+            <a href="{{ path('app_login') }}"
+               class="bg-pink-dark w-full p-3 rounded text-white shadow-xl hover:shadow-inner focus:outline-none font-bold">
+                Sign in
+            </a>
         </div>
-
-        <div class="w-full transform border-b-2 bg-transparent text-lg duration-300 focus-within:border-indigo-500">
-            {{ form_row(registrationForm.plainPassword, {
-                label: 'Password',
-                attr: {'class': 'w-full border-none bg-transparent outline-none placeholder:italic focus:outline-none','placeholder': 'Password'}
-            }) }}
-        </div>
-
-        {# {{ form_row(registrationForm.agreeTerms) }} #}
-
-        <button type="submit" class="transform rounded-sm bg-indigo-600 py-2 font-bold duration-300 hover:bg-indigo-400">Register</button>
-        {{ form_end(registrationForm) }}
-    </main>
+    </footer>
 
 
 {% endblock %}
