--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -1,30 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SiteController!{% endblock %}
+{% block title %}Colors and links tree!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <header class="flex flex-row-reverse w-full py-4 px-8 gap-4">
+        {% if is_granted('ROLE_USER') %}
+            <a href="{{ path('app_dashboard') }}" class="font-bold text-xl p-4 text-slate-600 hover:text-blue-600">
+                Dashboard
+            </a>
+            <a href="{{ path('app_logout') }}" class="font-bold text-xl p-4 text-slate-600 hover:text-blue-600">
+                Logout
+            </a>
+        {% else %}
+            <a href="{{ path('app_login') }}"
+               class="font-bold text-xl p-4 text-slate-600 hover:text-blue-600">
+                Login
+            </a>
+            <a href="{{ path('app_register') }}" class="font-bold text-xl p-4 text-slate-600 hover:text-blue-600">
+                Register
+            </a>
+        {% endif %}
+    </header>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/linktree_clone/src/Controller/SiteController.php'|file_link(0) }}">src/Controller/SiteController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/linktree_clone/templates/site/index.html.twig'|file_link(0) }}">templates/site/index.html.twig</a></code></li>
-    </ul>
+    <div class="relative mx-auto flex w-full justify-center font-sans flex-grow">
 
-    {% if is_granted('ROLE_USER') %}
-        <a href="{{ path('app_dashboard') }}" class="">Go to dashboard</a>
-        <a href="{{ path('app_logout') }}" class="">LOGOUT</a>
-    {% else %}
-        <a href="{{ path('app_login') }}" class="">Login</a>
+        <div class="w-full px-64 py-40">
+            <div class="text-6xl font-bold prose">Welcome to linktree clone</div>
+            <div class="text-2xl prose">Now with ability to add and show your favourite colors</div>
+        </div>
 
-        <a href="{{ path('app_register') }}" class="">Register</a>
-    {% endif %}
+        <div class="absolute bottom-0 right-0 -z-20">
+            <div style="width: 0;height: 0;border-style: solid;border-width: 0 0 500px 500px;border-color: transparent transparent #007bff transparent;"></div>
+        </div>
 
-</div>
+        <div class="absolute bottom-20 right-2 -z-30">
+            <div class="bg-orange-400"
+                 style="width: 30rem;height: 11rem;border-radius: 10rem;"></div>
+        </div>
+
+    </div>
 {% endblock %}
