--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,7 +14,7 @@
 
                     {% if error %}
                         <div class="text-red-900 bg-red-400 p-4 font-bold border-red-800 rounded-sm">
-                            This is error message
+                            {{ error.messageKey|trans(error.messageData,'security') }}
                         </div>
                     {% endif %}
 
@@ -44,6 +44,8 @@
                             LOG IN
                         </button>
                     </div>
+
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                 </form>
             </div>
         </div>
