--- a/templates/dashboard/settings.html.twig
+++ b/templates/dashboard/settings.html.twig
@@ -4,9 +4,40 @@
 
 {% block body %}
 
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-    {{ form_end(form) }}
+    {{ include('fragments/_admin_header.html.twig') }}
+
+    <div class="w-full">
+        <div class="bg-gradient-to-b from-blue-700 to-blue-500 h-96"></div>
+        <div class="max-w-5xl mx-auto px-6 sm:px-6 lg:px-8 mb-12 mt-12">
+            <div class="bg-white w-full shadow rounded p-8 sm:p-12 -mt-72">
+                <p class="text-3xl font-bold leading-7 text-center">Colors for links</p>
+                {{ form_start(form) }}
+
+                <div class="md:flex items-center mt-12 gap-4">
+                    <div class="w-full md:w-1/2 flex flex-col">
+
+                        {{ form_label(form.backgroundColor, null, {label_attr: {'class': 'font-semibold leading-none block' }}) }}
+
+                        {{ form_widget(form.backgroundColor, {attr: {'class': 'leading-none text-gray-900 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200 w-full h-10'}}) }}
+                    </div>
+                    <div class="w-full md:w-1/2 flex flex-col">
+
+                        {{ form_label(form.textColor, null, {label_attr: {'class': 'font-semibold leading-none block' }}) }}
+
+                        {{ form_widget(form.textColor, {attr: {'class': 'leading-none text-gray-900 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200 w-full h-10'}}) }}
+                    </div>
+                </div>
+
+                <div class="flex items-center justify-center w-full">
+
+                    <button class="mt-9 font-semibold leading-none text-white py-4 px-10 bg-blue-500 rounded hover:bg-blue-600 focus:ring-2 focus:ring-offset-2 focus:ring-blue-700 focus:outline-none">
+                        {{ button_label|default('Save') }}
+                    </button>
+                </div>
+                {{ form_end(form) }}
+
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
