--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -35,7 +35,8 @@
         </div>
 
         <div class="absolute bottom-0 right-0 -z-20">
-            <div style="width: 0;height: 0;border-style: solid;border-width: 0 0 500px 500px;border-color: transparent transparent #007bff transparent;"></div>
+            <div class="border-t-transparent border-r-transparent border-b-blue-500 border-l-transparent"
+                 style="width: 0;height: 0;border-style: solid;border-width: 0 0 500px 500px;"></div>
         </div>
 
         <div class="absolute bottom-20 right-2 -z-30">
