--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -3,26 +3,61 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block body %}
-    <style>
-        .example-wrapper {
-            margin: 1em auto;
-            max-width: 800px;
-            width: 95%;
-            font: 18px/1.5 sans-serif;
-        }
 
-        .example-wrapper code {
-            background: #F5F5F5;
-            padding: 2px 6px;
-        }
-    </style>
+    {{ include('fragments/_admin_header.html.twig') }}
+
+    <div class="bg-white py-4 md:py-4 px-4 md:px-4 xl:px-4">
+        <div class="sm:flex items-center justify-between">
+            <a class="focus:ring-2 focus:ring-offset-2 focus:ring-indigo-600 mt-4 sm:mt-0 inline-flex items-start justify-start px-6 py-3 bg-indigo-700 hover:bg-indigo-600 focus:outline-none rounded"
+               href="{{ path('app_link_new') }}">
+                <span class="text-sm font-medium leading-none text-white">Create new</span>
+            </a>
+        </div>
+
+        <div class="mt-7 overflow-x-auto">
+            <table class="w-full whitespace-nowrap">
+                <thead>
+                <tr class="focus:outline-none h-16 border border-gray-100 rounded">
+                    <th>Name</th>
+                    <th>Link</th>
+                    <th>Visits</th>
+                    <th>Last visit</th>
+                    <th>actions</th>
+                </tr>
+                </thead>
+                <tbody>
+
+                {% for link in links %}
+                    <tr class="focus:outline-none h-16 border border-gray-100 rounded text-center">
+                        <td>{{ link.name }}</td>
+                        <td><a href="{{ link.link }}">{{ link.link }}</a></td>
+                        <td>{{ link.linkVisits|length }}</td>
+                        <td>{{ link.latestVisit ? link.latestVisit.createdAt|ago : 'Not yet visited' }}</td>
+                        <td>
+                            <a class="focus:ring-2 focus:ring-offset-2 focus:ring-indigo-600 mt-4 sm:mt-0 inline-flex items-start justify-start px-6 py-3 bg-indigo-700 hover:bg-indigo-600 focus:outline-none rounded"
+                               href="{{ path('app_link_show', {'id': link.id}) }}">
+                                <span class="text-sm font-medium leading-none text-white">show</span>
+                            </a>
+                            <a class="focus:ring-2 focus:ring-offset-2 focus:ring-indigo-600 mt-4 sm:mt-0 inline-flex items-start justify-start px-6 py-3 bg-indigo-700 hover:bg-indigo-600 focus:outline-none rounded"
+                               href="{{ path('app_link_edit', {'id': link.id}) }}">
+                                <span class="text-sm font-medium leading-none text-white">edit</span>
+                            </a>
+
+                            {{ include('link/_delete_form.html.twig') }}
+
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="5">No links created yet.</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 
     <div class="example-wrapper">
-        <h1>Hello you are logged in! ✅</h1>
-
-        <p>
-            <a href="{{ path('app_user_edit') }}">EDIT YOUR SETTINGS</a>
-        </p>
 
         {% if is_granted('ROLE_ADMIN') %}
             <p class="text-red-800 font-bold text-xl">You are cool admin</p>
