--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.triangle {
+  @apply border-t-transparent border-r-transparent border-b-blue-500 border-l-transparent;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 0 250px 250px;
+}
+
+.pill {
+  @apply bg-orange-400;
+  width: 19rem;
+  height: 6rem;
+  border-radius: 4rem;
+}
+
+@media (min-width: 768px) {
+  .triangle {
+    border-width: 0 0 500px 500px;
+  }
+
+  .pill {
+    width: 30rem;
+    height: 11rem;
+    border-radius: 10rem;
+  }
+}
