--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <div class="relative mx-auto flex w-full items-center justify-center font-sans flex-grow bg-blue-dark-900">
+    <div class="relative mx-auto flex w-full items-center justify-center font-sans flex-grow bg-blue-dark-900 px-6 md:px-0">
         <div class="relative sm:max-w-sm w-full">
 
             <div class="card bg-pink-dark shadow-lg w-full h-full rounded-3xl absolute transform -rotate-6"></div>
@@ -60,9 +60,9 @@
     </div>
 
 
-    <footer class="flex-shrink-0 flex gap-4 bg-blue-dark-700 p-8 justify-center">
-        <div class="text-slate-500">Already have an account?</div>
-        <div>
+    <footer class="flex-shrink-0 flex flex-col md:flex-row gap-4 bg-blue-dark-700 p-4 md:p-8 justify-center">
+        <div class="text-slate-500 text-center">Already have an account?</div>
+        <div class="text-center">
             <a href="{{ path('app_login') }}"
                class="bg-pink-dark w-full p-3 rounded text-white shadow-xl hover:shadow-inner focus:outline-none font-bold">
                 Sign in
