--- a/templates/link/edit.html.twig
+++ b/templates/link/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('link/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_link_index') }}">back to list</a>
+    <a href="{{ path('app_dashboard') }}">back to list</a>
 
     {{ include('link/_delete_form.html.twig') }}
 {% endblock %}
