--- a/templates/link/new.html.twig
+++ b/templates/link/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('link/_form.html.twig') }}
 
-    <a href="{{ path('app_link_index') }}">back to list</a>
+    <a href="{{ path('app_dashboard') }}">back to list</a>
 {% endblock %}
