--- a/templates/link/show.html.twig
+++ b/templates/link/show.html.twig
@@ -30,7 +30,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_link_index') }}">back to list</a>
+    <a href="{{ path('app_dashboard') }}">back to list</a>
 
     <a href="{{ path('app_link_edit', {'id': link.id}) }}">edit</a>
 
