--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,6 +2,9 @@
 
 {% block title %}Register!{% endblock %}
 
+{% block header %}
+{% endblock %}
+
 {% block body %}
 
     <div class="relative mx-auto flex w-full items-center justify-center font-sans flex-grow bg-blue-dark-900 px-6 md:px-0">
