--- a/templates/site/links.html.twig
+++ b/templates/site/links.html.twig
@@ -2,6 +2,9 @@
 
 {% block title %} {{ user.name }} Links{% endblock %}
 
+{% block header %}
+{% endblock %}
+
 {% block body %}
     <div class="relative mx-auto flex w-full items-center justify-center font-sans flex-grow"
          style="background-color: {{ user.backgroundColor|default('#fff') }}">
