--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,5 +1,10 @@
 {% extends 'base.html.twig' %}
 {% block title %}Log In!{% endblock %}
+
+
+{% block header %}
+{% endblock %}
+
 {% block body %}
 
     <div class="relative mx-auto flex w-full items-center justify-center font-sans flex-grow bg-blue-dark-900 px-6 md:px-0">
