--- a/templates/link/show.html.twig
+++ b/templates/link/show.html.twig
@@ -3,36 +3,65 @@
 {% block title %}Link{% endblock %}
 
 {% block body %}
-    <h1>Link</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ link.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ link.name }}</td>
-            </tr>
-            <tr>
-                <th>Link</th>
-                <td>{{ link.link }}</td>
-            </tr>
-            <tr>
-                <th>Created_at</th>
-                <td>{{ link.createdAt ? link.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Updated_at</th>
-                <td>{{ link.updatedAt ? link.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="w-full">
+        <div class="bg-gradient-to-b from-blue-700 to-blue-500 h-96"></div>
+        <div class="max-w-5xl mx-auto px-6 sm:px-6 lg:px-8 mb-12 mt-12">
+            <div class="bg-white w-full shadow rounded p-8 sm:p-12 -mt-72">
+                <p class="text-3xl font-bold leading-7 text-center">Link details</p>
 
-    <a href="{{ path('app_dashboard') }}">back to list</a>
+                <div class="md:flex items-center mt-12 gap-4">
 
-    <a href="{{ path('app_link_edit', {'id': link.id}) }}">edit</a>
+                    <div class="w-full md:w-1/2 flex flex-col">
+                        <span class="font-semibold leading-none block px-2">Name</span>
+                        <div class="leading-none text-slate-900 mt-4 rounded w-full h-10 px-2">{{ link.name }}</div>
+                    </div>
 
-    {{ include('link/_delete_form.html.twig') }}
+                    <div class="w-full md:w-1/2 flex flex-col">
+                        <span class="font-semibold leading-none block px-2">Link</span>
+                        <div class="leading-none text-slate-900 mt-4 rounded w-full h-10 px-2">{{ link.link }}</div>
+                    </div>
+
+                    <div class="w-full md:w-1/2 flex flex-col">
+                        <span class="font-semibold leading-none block px-2">Created at</span>
+                        <div class="leading-none text-slate-900 mt-4 rounded w-full h-10 px-2">{{ link.createdAt|ago }}</div>
+                    </div>
+
+                    <div class="w-full md:w-1/2 flex flex-col">
+                        <span class="font-semibold leading-none block px-2">Updated at</span>
+                        <div class="leading-none text-slate-900 mt-4 rounded w-full h-10 px-2">{{ link.updatedAt|ago }}</div>
+                    </div>
+
+
+                    <div class="w-full md:w-1/2 flex flex-col">
+                        <span class="font-semibold leading-none block px-2">Visits</span>
+                        <div class="leading-none text-slate-900 mt-4 rounded w-full h-10 px-2">{{ link.linkVisits|length }}</div>
+                    </div>
+
+                    <div class="w-full md:w-1/2 flex flex-col">
+                        <span class="font-semibold leading-none block px-2">Last visit</span>
+                        <div class="leading-none text-slate-900 mt-4 rounded w-full h-10 px-2">{{ link.latestVisit ? link.latestVisit.createdAt|ago : 'Not yet visited' }}</div>
+                    </div>
+                </div>
+
+                <div class="flex items-center w-full gap-8">
+
+                    <a class="btn-main" href="{{ path('app_link_edit', {'id': link.id}) }}">Edit</a>
+
+                    <a class="btn-default" href="{{ path('app_dashboard') }}">Back to list</a>
+
+                    <div class="ml-auto">
+                        {{ include('link/_delete_form.html.twig') }}
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
 {% endblock %}
