--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -28,3 +28,15 @@
     border-radius: 10rem;
   }
 }
+
+.btn-main {
+  @apply mt-9 font-semibold leading-none text-white py-4 px-10 bg-blue-500 rounded hover:bg-blue-600 focus:ring-2 focus:ring-offset-2 focus:ring-blue-700 focus:outline-none;
+}
+
+.btn-delete {
+  @apply mt-9 font-semibold leading-none text-white py-4 px-10 bg-red-500 rounded hover:bg-red-600 focus:ring-2 focus:ring-offset-2 focus:ring-red-700 focus:outline-none;
+}
+
+.btn-default {
+  @apply mt-9 font-semibold leading-none text-white py-4 px-10 bg-slate-500 rounded hover:bg-slate-600 focus:ring-2 focus:ring-offset-2 focus:ring-slate-700 focus:outline-none;
+}
