--- a/templates/dashboard/settings.html.twig
+++ b/templates/dashboard/settings.html.twig
@@ -16,17 +16,17 @@
 
                         {{ form_label(form.backgroundColor, null, {label_attr: {'class': 'font-semibold leading-none block' }}) }}
 
-                        {{ form_widget(form.backgroundColor, {attr: {'class': 'leading-none text-gray-900 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200 w-full h-10'}}) }}
+                        {{ form_widget(form.backgroundColor, {attr: {'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10'}}) }}
                     </div>
                     <div class="w-full md:w-1/2 flex flex-col">
 
                         {{ form_label(form.textColor, null, {label_attr: {'class': 'font-semibold leading-none block' }}) }}
 
-                        {{ form_widget(form.textColor, {attr: {'class': 'leading-none text-gray-900 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200 w-full h-10'}}) }}
+                        {{ form_widget(form.textColor, {attr: {'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10'}}) }}
                     </div>
                 </div>
 
-                <div class="flex items-center justify-center w-full">
+                <div class="flex items-center w-full">
 
                     <button class="mt-9 font-semibold leading-none text-white py-4 px-10 bg-blue-500 rounded hover:bg-blue-600 focus:ring-2 focus:ring-offset-2 focus:ring-blue-700 focus:outline-none">
                         {{ button_label|default('Save') }}
