--- a/templates/link/_form.html.twig
+++ b/templates/link/_form.html.twig
@@ -1,4 +1,24 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+
+<div class="md:flex items-center mt-12 gap-4">
+    <div class="w-full md:w-1/2 flex flex-col">
+        {{ form_label(form.name, null, {label_attr: {'class': 'font-semibold leading-none block px-2' }}) }}
+
+        {{ form_widget(form.name, {attr: {'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10 px-2'}}) }}
+
+    </div>
+    <div class="w-full md:w-1/2 flex flex-col">
+        {{ form_label(form.link, null, {label_attr: {'class': 'font-semibold leading-none block px-2' }}) }}
+
+        {{ form_widget(form.link, {attr: {'class': 'leading-none text-slate-900 focus:outline-none focus:border-blue-700 mt-4 bg-slate-100 border rounded border-slate-200 w-full h-10 px-2'}}) }}
+
+    </div>
+</div>
+
+<div class="flex items-center w-full">
+
+    <button class="btn-main">
+        {{ button_label|default('Save') }}
+    </button>
+</div>
 {{ form_end(form) }}
