--- a/templates/link/new.html.twig
+++ b/templates/link/new.html.twig
@@ -3,9 +3,17 @@
 {% block title %}New Link{% endblock %}
 
 {% block body %}
-    <h1>Create new Link</h1>
 
-    {{ include('link/_form.html.twig') }}
+    <div class="w-full">
+        <div class="bg-gradient-to-b from-blue-700 to-blue-500 h-96"></div>
+        <div class="max-w-5xl mx-auto px-6 sm:px-6 lg:px-8 mb-12 mt-12">
+            <div class="bg-white w-full shadow rounded p-8 sm:p-12 -mt-72">
 
-    <a href="{{ path('app_dashboard') }}">back to list</a>
+                <p class="text-3xl font-bold leading-7 text-center">Create new Link</p>
+
+                {{ include('link/_form.html.twig') }}
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
