--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -40,3 +40,21 @@
 .btn-default {
   @apply mt-9 font-semibold leading-none text-white py-4 px-10 bg-slate-500 rounded hover:bg-slate-600 focus:ring-2 focus:ring-offset-2 focus:ring-slate-700 focus:outline-none;
 }
+
+.table-links {
+  border-spacing: 0 5px;
+}
+
+.table-links tr {
+  border-radius: 20px;
+}
+
+tr td:nth-child(n+5),
+tr th:nth-child(n+5) {
+  border-radius: 0 .625rem .625rem 0;
+}
+
+tr td:nth-child(1),
+tr th:nth-child(1) {
+  border-radius: .625rem 0 0 .625rem;
+}
