--- a/templates/color/edit.html.twig
+++ b/templates/color/edit.html.twig
@@ -3,11 +3,15 @@
 {% block title %}Edit Color{% endblock %}
 
 {% block body %}
-    <h1>Edit Color</h1>
 
-    {{ include('color/_form.html.twig', {'button_label': 'Update'}) }}
+    <div class="w-full">
+        <div class="bg-gradient-to-b from-blue-700 to-blue-500 h-96"></div>
+        <div class="max-w-5xl mx-auto px-6 sm:px-6 lg:px-8 mb-12 mt-12">
+            <div class="bg-white w-full shadow rounded p-8 sm:p-12 -mt-72">
+                <p class="text-3xl font-bold leading-7 text-center">Edit Color</p>
 
-    <a href="{{ path('app_color_index') }}">back to list</a>
-
-    {{ include('color/_delete_form.html.twig') }}
+                {{ include('color/_form.html.twig', {'button_label': 'Update'}) }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
